assets/css/src/content.css
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Imports
	# Blocks
	# Media
		# Captions
		# Galleries (Legacy)
# Post and page content
	# Alignments
	# Custom block colors
	# Custom font sizes
# Content Navigation
# Infinite Scrool
# Layouts
--------------------------------------------------------------*/

/*--------------------------------------------------------------
# Imports
--------------------------------------------------------------*/
@import "_blocks.css";
@import "_media.css";
@import "_forms.css";
@import "_footer.css";
@import "widgets.css";

/*--------------------------------------------------------------
# Post and page content
--------------------------------------------------------------*/

/* Custom rule  for sticky posts:
.sticky {

}
*/

.entry {
	margin-bottom: 1rem;
}

.entry-meta,
.entry-footer {
	font-family: var(--highlight-font-family);
	font-stretch: condensed;
	font-size: 80%;
}

.entry-meta {
	margin: 1em 0;
}

/* Hides the update date and time. */
.updated:not(.published) {
	display: none;
}

.post-thumbnail img {
	margin: 0 auto;
}

.page-content,
.entry-content,
.entry-summary {
	margin: 1.5em 0 0;
}

.entry-content > ul,
.entry-content > ol {
	padding-left: 3.5em;
}

.page-content > *,
.entry-content > *,
.entry-summary > * {
	margin-right: auto;
	margin-left: auto;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
	max-width: var(--content-width);
}

.page-header,
.entry-header,
.entry-footer,
.site-info,
.post-navigation,
.page-navigation,
.comments-area {
	margin-top: 1.5em;
	margin-bottom: 1.5em;
}

.page-content > *,
.entry-content > *,
.entry-summary > *,
.page-header,
.entry-header,
.entry-footer,
.site-info,
.post-navigation,
.page-navigation,
.comments-area {
	margin-left: auto;
	margin-right: auto;
	padding-right: 1.5rem;
	padding-left: 1.5rem;
	max-width: var(--content-width);
}

@media (--content-query) {

	.entry-content > ul,
	.entry-content > ol {
		padding-left: 2.5em;
		padding-right: 2.5em;
	}
}

/* Align .more-link with the content. */
.entry-content > .more-link {
	display: block;
}

.page-links {
	clear: both;
	margin-bottom: 1.5em;
}

.entry-footer span {
	margin-right: 1em;
}

.entry-footer {
	clear: both;
	padding: 1.5em 1.5rem 3em;
	border-bottom: 1px solid var(--global-font-color);
}

@media (--content-query) {

	.entry-footer {
		padding-right: 0;
		padding-left: 0;
	}
}

/*--------------------------------------------------------------
## Alignments
--------------------------------------------------------------*/
.alignleft {
	float: left;
	margin-right: 1.5rem;
}

.alignright {
	float: right;
	margin-left: 1.5rem;
}

.aligncenter {
	clear: both;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.alignwide {
	max-width: calc(50% + var(--content-width) / 2);
}

.alignfull {
	max-width: 100%;
}

.page-content > .alignleft,
.entry-content > .alignleft,
.entry-summary > .alignleft {
	margin-left: 1.5rem;
}

.page-content > .alignright,
.entry-content > .alignright,
.entry-summary > .alignright {
	margin-right: 1.5rem;
}

@media (--content-query) {

	.page-content > .alignleft,
	.entry-content > .alignleft,
	.entry-summary > .alignleft {
		margin-left: calc((100vw - var(--content-width)) / 2);
	}

	.page-content > .alignright,
	.entry-content > .alignright,
	.entry-summary > .alignright {
		margin-right: calc((100vw - var(--content-width)) / 2);
	}
}

@media (--sidebar-query) {

	.has-sidebar .page-content > .alignleft,
	.has-sidebar .entry-content > .alignleft,
	.has-sidebar .entry-summary > .alignleft {
		margin-left: calc((75vw - 2rem - var(--content-width)) / 2);
	}

	.has-sidebar .page-content > .alignright,
	.has-sidebar .entry-content > .alignright,
	.has-sidebar .entry-summary > .alignright {
		margin-right: calc((75vw - 2rem - var(--content-width)) / 2);
	}
}

/*--------------------------------------------------------------
## Custom block colors.
--------------------------------------------------------------*/

.has-theme-primary-color {
	color: var(--color-theme-primary);
}

.has-theme-primary-background-color {
	background-color: var(--color-theme-primary);
}

.has-theme-secondary-color {
	color: var(--color-theme-secondary);
}

.has-theme-secondary-background-color {
	background-color: var(--color-theme-secondary);
}

.has-theme-red-color {
	color: var(--color-theme-red);
}

.has-theme-red-background-color {
	background-color: var(--color-theme-red);
}

.has-theme-green-color {
	color: var(--color-theme-green);
}

.has-theme-green-background-color {
	background-color: var(--color-theme-green);
}

.has-theme-blue-color {
	color: var(--color-theme-blue);
}

.has-theme-blue-background-color {
	background-color: var(--color-theme-blue);
}

.has-theme-yellow-color {
	color: var(--color-theme-yellow);
}

.has-theme-yellow-background-color {
	background-color: var(--color-theme-yellow);
}

.has-theme-black-color {
	color: var(--color-theme-black);
}

.has-theme-black-background-color {
	background-color: var(--color-theme-black);
}

.has-theme-grey-color {
	color: var(--color-theme-grey);
}

.has-theme-grey-background-color {
	background-color: var(--color-theme-grey);
}

.has-theme-white-color {
	color: var(--color-theme-white);
}

.has-theme-white-background-color {
	background-color: var(--color-theme-white);
}

.has-custom-daylight-color {
	color: var(--color-custom-daylight);
}

.has-custom-daylight-background-color {
	background-color: var(--color-custom-daylight);
}

.has-custom-sun-color {
	color: var(--color-custom-sun);
}

.has-custom-sun-background-color {
	background-color: var(--color-custom-sun);
}

/*--------------------------------------------------------------
## Custom block font sizes.
--------------------------------------------------------------*/

.has-small-font-size {
	font-size: var(--font-size-small);
}

.has-regular-font-size {
	font-size: var(--font-size-regular);
}

.has-large-font-size {
	font-size: var(--font-size-large);
}

.has-larger-font-size {
	font-size: var(--font-size-larger);
}

/*--------------------------------------------------------------
# Content navigation
--------------------------------------------------------------*/
.site-main .comment-navigation,
.site-main .posts-navigation,
.site-main .post-navigation,
.site-main .pagination {
	border-bottom: 1px solid var(--border-color-dark);
	margin: 0 auto 2em;
	max-width: var(--content-width);
	overflow: hidden;
	padding: 0 1.5rem 2em;
	font-family: var(--highlight-font-family);
	font-stretch: condensed;
}

@media (--content-query) {

	.site-main .comment-navigation,
	.site-main .posts-navigation,
	.site-main .post-navigation,
	.site-main .pagination {
		padding-left: 0;
		padding-right: 0;
	}
}

.nav-links {
	display: flex;
}

.comment-navigation .nav-previous,
.posts-navigation .nav-previous,
.post-navigation .nav-previous {
	width: 50%;
	flex: 1 0 50%;
}

.comment-navigation .nav-next,
.posts-navigation .nav-next,
.post-navigation .nav-next {
	text-align: end;
	flex: 1 0 50%;
}

.post-navigation-sub span {
	color: var(--global-font-color);
	text-decoration: none;
	display: inline-block;
}

.site-main .pagination {
	margin-bottom: 1.5em;
}

.pagination .nav-links {
	justify-content: center;
	flex-wrap: wrap;
}

.pagination .page-numbers {
	display: inline-block;
	margin-bottom: 0.5em;
	margin-right: 1em;
	border: 1px solid var(--color-link);
	min-width: 1.75em;
	line-height: 1.75;
	text-align: center;
	text-decoration: none;
}

.pagination a:visited {
	color: var(--color-link);
}

.pagination a:hover,
.pagination a:focus,
.pagination a:active {
	border-color: var(--color-link-active);
}

.pagination .prev,
.pagination .next {
	min-width: auto;
	border-color: transparent;
	text-decoration: underline;
}

.pagination .prev:hover,
.pagination .prev:focus,
.pagination .prev:active,
.pagination .next:hover,
.pagination .next:focus,
.pagination .next:active {
	border-color: transparent;
}

.pagination .dots {
	min-width: auto;
	border: none;
}

.pagination .current {
	border-color: var(--border-color-dark);
}

/*--------------------------------------------------------------
# Infinite scroll
--------------------------------------------------------------*/

/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .posts-navigation,
.infinite-scroll .pagination,
.infinite-scroll.neverending .site-footer {

	/* Theme Footer (when set to scrolling) */
	display: none;
}

/* When Infinite Scroll has reached its end we need to re-display elements that
were hidden (via .neverending) before. */
.infinity-end.neverending .site-footer {
	display: block;
}

.wp-rig {
	display:none;
}

/*--------------------------------------------------------------
# Layouts
--------------------------------------------------------------*/
.site {
	margin: 0 auto;
	max-width: 100%;
}

@media (--sidebar-query) {

	.has-sidebar .site {
		margin: 0 1em;
		display: grid;
		grid-template-columns: 3fr 1fr;
		grid-gap: 2rem;
		justify-content: center;
	}

	.site-header,
	.site-footer {
		grid-column: 1 / -1;
	}

	.site-main {
		grid-column: 1;
		min-width: 0;
	}

	.primary-sidebar {
		grid-column: 2;
		min-width: 0;
	}
}

